# data-platform

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test_cors.py
.claude/: settings.json
.claude/rules/common/: coding-style.md  git-workflow.md  hooks.md  patterns.md  security.md  testing.md
.claude/rules/python/: coding-style.md  data-pipeline.md  hooks.md  patterns.md  security.md  testing.md
.claude/skills/api-design/: SKILL.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/data-pipeline/: SKILL.md
.claude/skills/database-migrations/: SKILL.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/tdd-workflow/: SKILL.md
.claude/skills/verification-loop/: SKILL.md
airflow/dags/: world_bank_pipeline.py
dbt/idp/: dbt_project.yml
dbt/idp/macros/: setup_s3.sql
dbt/idp/seeds/: seed_countries.csv  seed_indicators.csv
docker/: Dockerfile.api
docs/: OPERATIONS.md  README.md  architecture.html
docs/architecture/: 00-overview.md  01-layer-ingestion.md  02-layer-transformation.md  03-layer-storage.md  04-layer-intelligence.md  05-layer-orchestration.md  06-api-spec.md  07-tech-stack.md  08-project-structure.md
docs/phases/: PHASE-0-SETUP.md  PHASE-0-SUMMARY.md  PHASE-1-INGESTION.md  PHASE-2-TRANSFORMATION.md  PHASE-3-STORAGE.md  PHASE-4-INTELLIGENCE.md  PHASE-5-ORCHESTRATION.md  PHASE-README.md
scripts/: create_embeddings_schema.sql  health_check.sh  init-db.sql  optimize_postgres.sql
src/idp/: main.py
src/idp/api/: main.py
src/idp/common/: config.py  exceptions.py  http_client.py  logging_config.py  minio_client.py
src/idp/ingestion/: cli.py
tests/: conftest.py  e2e_chatbot.py  e2e_doc_embeddings.py  e2e_mock_gemini.py  e2e_pipeline.py
tests/integration/: test_airflow_dag_integration.py
tests/test_api/: test_chat.py  test_main.py  test_routers.py  test_schemas.py  test_search.py
tests/test_intelligence/: test_gemini_client.py  test_rag_engine.py
tests/unit/: test_config.py  test_exceptions.py  test_logging.py  test_sample.py
(+56 files in other folders)
