[project]
name = "data-platform"
version = "0.1.0"
description = "Intelligent Data Platform for economic data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.0",
    "dbt-core>=1.10.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.1.0",
    "fastapi[standard]>=0.115.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.28.0",
    "minio>=7.2.0",
    "pgvector>=0.3.0",
    "polars>=1.15.0",
    "psycopg[binary]>=3.2.0",
    "pyarrow>=18.0.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    "typer>=0.26.4",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
idp = "idp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idp"]
